--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -28,6 +28,7 @@ ja:
       taken: はすでに使用されています
       too_short: は6文字以上で入力してください
       confirmation: と%{attribute}の入力が一致しません
+      record_invalid: "バリデーションに失敗しました: %{errors}"
   notice:
     successful_task: タスクを%{action}しました
     successful_user: アカウントを%{action}しました
